# benchmark

./: .mypy.ini  README.md  pyproject.toml
rlb/: rlb.py
rlb/llama_bench/: __init__.py  benchmark.py  prompts.py  stats.py  utils.py
rlb/output/: __init__.py  output.py
rlb/sysinfo/: __init__.py  sysinfo.py
tests/output/: test_output.py
